Fix button spacing

--- a/nyhetsrum/style.scss
+++ b/nyhetsrum/style.scss
@@ -629,7 +629,7 @@ button {
 
         .selector-card {
             width: 230%;
-            height: 280px;
+            height: 400px;
             flex-direction: column;
             padding-right: 5%;
 
